--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /spring-boot-reactive-helloworld/target/
 /spring-boot-reactive-dockerfile/target/
 /spring-boot-reactive-logging/target/
+/spring-boot-reactive-controller/target/
