--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /spring-boot-reactive-logging/target/
 /spring-boot-reactive-controller/target/
 /spring-boot-reactive-form-data/target/
+/spring-boot-reactive-download-file/target/
