--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /spring-boot-reactive-controller/target/
 /spring-boot-reactive-form-data/target/
 /spring-boot-reactive-download-file/target/
+/spring-boot-reactive-upload-file/target/
