--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /spring-boot-reactive-form-data/target/
 /spring-boot-reactive-download-file/target/
 /spring-boot-reactive-upload-file/target/
+/spring-boot-reactive-session/target/
