--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /spring-boot-reactive-download-file/target/
 /spring-boot-reactive-upload-file/target/
 /spring-boot-reactive-session/target/
+/spring-boot-reactive-cookie/target/
