update configuration-properties to java 11

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /spring-boot-reactive-upload-file/target/
 /spring-boot-reactive-session/target/
 /spring-boot-reactive-cookie/target/
+/spring-boot-reactive-configuration-properties/target/
 /spring-boot-reactive-oauth-client/target/
 
 .DS_Store
