--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /spring-boot-reactive-session/target/
 /spring-boot-reactive-cookie/target/
 /spring-boot-reactive-configuration-properties/target/
+/spring-boot-reactive-thymleaf/target/
 /spring-boot-reactive-oauth-client/target/
 
 .DS_Store
