--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-/spring-boot-reactive-helloworld/target/
-/spring-boot-reactive-dockerfile/target/
-/spring-boot-reactive-logging/target/
-/spring-boot-reactive-controller/target/
-/spring-boot-reactive-form-data/target/
-/spring-boot-reactive-download-file/target/
-/spring-boot-reactive-upload-file/target/
-/spring-boot-reactive-session/target/
-/spring-boot-reactive-cookie/target/
-/spring-boot-reactive-configuration-properties/target/
-/spring-boot-reactive-thymleaf/target/
-/spring-boot-reactive-web-filter/target/
-/spring-boot-reactive-oauth-client/target/
+*/target/
 
 .DS_Store
 */.DS_Store
