add line oauth example

--- a/spring-boot-reactive-oauth-client/pom.xml
+++ b/spring-boot-reactive-oauth-client/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
     
     <build>
