--- a/spring-boot-reactive-r2dbc-database-client/src/main/resources/application.properties
+++ b/spring-boot-reactive-r2dbc-database-client/src/main/resources/application.properties
@@ -3,6 +3,6 @@ logging.level.me.jittagornp=DEBUG
 logging.level.org.springframework.data.r2dbc=DEBUG
 
 #---------------------------------- R2dbc --------------------------------------
-#spring.r2dbc.url=r2dbc:postgresql://<DATABASE_HOST_IP>/<DATA_BASE_NAME>?schema=app
-#spring.r2dbc.username=<DATABASE_USERNAME>
-#spring.r2dbc.password=<DATABASE_PASSWORD>
+spring.r2dbc.url=r2dbc:postgresql://<DATABASE_HOST_IP>/<DATA_BASE_NAME>?schema=app
+spring.r2dbc.username=<DATABASE_USERNAME>
+spring.r2dbc.password=<DATABASE_PASSWORD>
