update r2dbc pagination

--- a/spring-boot-reactive-r2dbc-pagination/src/main/resources/application.properties
+++ b/spring-boot-reactive-r2dbc-pagination/src/main/resources/application.properties
@@ -3,11 +3,6 @@ logging.level.me.jittagornp=DEBUG
 logging.level.org.springframework.data.r2dbc=DEBUG
 
 #---------------------------------- R2dbc --------------------------------------
-#spring.r2dbc.url=r2dbc:postgresql://<DATABASE_HOST_IP>/<DATA_BASE_NAME>?schema=app
-#spring.r2dbc.username=<DATABASE_USERNAME>
-#spring.r2dbc.password=<DATABASE_PASSWORD>
-
-
-spring.r2dbc.url=r2dbc:postgresql://178.128.55.55/pamarin?schema=app
-spring.r2dbc.username=mariyap
-spring.r2dbc.password=SSUGapHfvuwBV8arK6KUdzj6WarVK6WKEBcvF6GDe8Fbcuf9KF
+spring.r2dbc.url=r2dbc:postgresql://<DATABASE_HOST_IP>/<DATA_BASE_NAME>?schema=app
+spring.r2dbc.username=<DATABASE_USERNAME>
+spring.r2dbc.password=<DATABASE_PASSWORD>
