Update dependency google guava

--- a/spring-boot-reactive-custom-validator/pom.xml
+++ b/spring-boot-reactive-custom-validator/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>21.0</version>
+            <version>[24.1.1,)</version>
             <type>jar</type>
         </dependency>
 
