--- a/spring-boot-reactive-dockerfile/Dockerfile
+++ b/spring-boot-reactive-dockerfile/Dockerfile
@@ -1,5 +1,5 @@
 # https://hub.docker.com/_/openjdk
-FROM openjdk:11-jre-slim
+FROM openjdk:21-slim
 EXPOSE 8080
 ADD target/*.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
