--- a/spring-boot-reactive-static-resources-http-caching/src/main/resources/application.properties
+++ b/spring-boot-reactive-static-resources-http-caching/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.webflux.static-path-pattern: /assets/**
-spring.resources.static-locations: classpath:/static/
+spring.web.resources.static-locations: classpath:/static/
 
 # caching
-spring.resources.cache.cachecontrol.cache-public=true
+spring.web.resources.cache.cachecontrol.cache-public=true
 # 1 day = 86400 seconds = 60 seconds x 60 x 24
-spring.resources.cache.cachecontrol.max-age=86400
+spring.web.resources.cache.cachecontrol.max-age=86400
