refactor: Update properties

--- a/spring-boot-reactive-static-resources-custom-path/src/main/resources/application.properties
+++ b/spring-boot-reactive-static-resources-custom-path/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.webflux.static-path-pattern: /assets/**
-spring.resources.static-locations: classpath:/static/
+spring.web.resources.static-locations: classpath:/static/
