--- a/spring-boot-reactive-pagination/pom.xml
+++ b/spring-boot-reactive-pagination/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>2.2.6.RELEASE</version>
+            <version>3.2.2</version>
         </dependency>
     </dependencies>
     
