--- a/spring-boot-reactive-r2dbc-postgresql/pom.xml
+++ b/spring-boot-reactive-r2dbc-postgresql/pom.xml
@@ -38,9 +38,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.r2dbc</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>1.0.4.RELEASE</version>
         </dependency>
         <!-- Database ****************************************************** -->
 
