refactor: Update code

--- a/spring-boot-reactive-r2dbc-pool-postgresql/src/main/resources/application.properties
+++ b/spring-boot-reactive-r2dbc-pool-postgresql/src/main/resources/application.properties
@@ -4,9 +4,9 @@ logging.level.org.springframework.data.r2dbc=DEBUG
 logging.level.io.r2dbc.pool=DEBUG
 
 #---------------------------------- R2dbc --------------------------------------
-spring.r2dbc.url=r2dbc:pool:postgresql://<DATABASE_HOST_IP>/<DATA_BASE_NAME>?schema=app
-spring.r2dbc.username=<DATABASE_USERNAME>
-spring.r2dbc.password=<DATABASE_PASSWORD>
+spring.r2dbc.url=r2dbc:postgresql://localhost/postgres?schema=app
+spring.r2dbc.username=postgres
+spring.r2dbc.password=password
 
 # config from https://github.com/r2dbc/r2dbc-pool
 spring.r2dbc.pool.initialSize=10
