--- a/spring-boot-reactive-r2dbc-pool-postgresql/pom.xml
+++ b/spring-boot-reactive-r2dbc-pool-postgresql/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>3.2.1</version>
     </parent>
     
     <dependencies>
@@ -38,15 +38,15 @@
         </dependency>
 
         <dependency>
-            <groupId>io.r2dbc</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>1.0.4.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-pool</artifactId>
-            <version>0.8.5.RELEASE</version>
+            <version>1.0.1.RELEASE</version>
         </dependency>
         <!-- Database ****************************************************** -->
 
